using System;
using System.Collections.Generic;

class Simulator
{
    public Dictionary<string, MobilePhone> Phone { get; }
    public Test[] Tests { get; }

    public Simulator(string phonePath, string testPath)
    {
        // TODO
    }

    public void RunAllTests(string resultPath)
    {
        
    }
}
